# flask-dotenv-issue-example

./: README.md  dotenv  pyproject.toml
src/: main.py  settings.py
src/routes/home/: views.py
