[tool.poetry]
name = "flask-doenv-issue-example"
version = "0.1.0"
description = ""
authors = ["vitaliy-diachkov <diachkovspecial@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
